--- a/SplashPageWebApp/EmailTemplate/EmailTemplate.html
+++ b/SplashPageWebApp/EmailTemplate/EmailTemplate.html
@@ -525,7 +525,7 @@
 																	</tr>
 																	<tr>
 																	    <td class="future" style="font-size: 4em; color: #fff; text-transform: capitalize; font-family: Candara; text-align: center; line-height: 1.5em">
-                                                                            {Code}
+																	        <span>{Code}</span>
 																	    </td>
 																	</tr>	
 																	<tr><td class="ban_tex" height="30"></td></tr>	
