Update: fix "code"

--- a/SplashPageWebApp/EmailTemplate/EmailTemplate.html
+++ b/SplashPageWebApp/EmailTemplate/EmailTemplate.html
@@ -433,7 +433,7 @@
                                                         <td class="ban_tex" height="30"></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="future" style="color: #fff; font-family: Candara; font-size: 4em; line-height: 1.5em; text-align: center; text-transform: capitalize;">
+                                                        <td class="future" style="color: #fff; font-family: Candara; font-size: 4em; line-height: 1.5em; text-align: center;">
                                                             <span>{Code}</span>
                                                         </td>
                                                     </tr>
