Update: Email Template

--- a/SplashPageWebApp/EmailTemplate/EmailTemplate.html
+++ b/SplashPageWebApp/EmailTemplate/EmailTemplate.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Innovative a Email Template | w3layouts</title>
+<link rel="stylesheet" href="/Content/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -11,6 +14,7 @@
 <!-- Responsive Styles and Valid Styles -->
 <style type="text/css">
     	
+
     body {
         -webkit-font-smoothing: antialiased;
         margin: 0;
@@ -414,11 +418,16 @@
                         <table class="ban-hei" width="100%" border="0" align="center" cellpadding="0" cellspacing="0" style="background: url(https://i.imgur.com/SsNijJ4.jpg); background-size: cover;" height="380">
                             <tbody>
                             <tr>
-                                <td class="ban_pad" height="80"></td>
+                                <td class="ban_pad" height="30"></td>
                             </tr>
                             <tr>
-                                <td style="color: #fff; font-family: Candara; font-size: 2em; text-align: center">
-                                    Send this code to the customer:
+                                <td style="color: #fff; font-family: Candara; font-size: 3em; text-align: center">
+                                    Confirm Your Email
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left" style="color: #fff; font-family: Candara; font-size: 1.2em; padding-left: 50px; padding-right: 30px; padding-bottom: 10px;">
+                                    You received a request to connect to your company Wi-Fi with this code. Please confirm by clicking the button below.
                                 </td>
                             </tr>
                             <tr>
@@ -430,11 +439,15 @@
                                                 <table class="ban_info" border="0" cellpadding="0" cellspacing="0" width="500">
                                                     <tbody>
                                                     <tr>
-                                                        <td class="ban_tex" height="30"></td>
-                                                    </tr>
-                                                    <tr>
                                                         <td class="future" style="color: #fff; font-family: Candara; font-size: 4em; line-height: 1.5em; text-align: center;">
                                                             <span>{Code}</span>
+                                                        </td>                                                      
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="center" style="text-align: center; padding-top: 10px;">
+                                                            <span>
+                                                                <button style="width: 130px; height: 40px" type="button" class="btn btn-primary">Confirm Email</button>
+                                                            </span>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -449,7 +462,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="ban_pad" height="80"></td>
+                                <td class="ban_pad" height="30"></td>
                             </tr>
                             </tbody>
                         </table>
