Update email template

--- a/SplashPageWebApp/EmailTemplate/EmailTemplate.html
+++ b/SplashPageWebApp/EmailTemplate/EmailTemplate.html
@@ -14,6 +14,20 @@
 <!-- Responsive Styles and Valid Styles -->
 <style type="text/css">
     	
+    .link-button {
+        background: #663399 none repeat scroll 0 0;
+        border: 1px solid #663399;
+        color: #ffffff;
+        outline: medium none;
+        padding: 15px; 
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    .link-button:hover {
+        background-color: darkviolet;
+        color: #ffffff;
+    }
 
     body {
         -webkit-font-smoothing: antialiased;
@@ -446,7 +460,7 @@
                                                     <tr>
                                                         <td class="center" style="text-align: center; padding-top: 10px;">
                                                             <span>
-                                                                <button style="width: 130px; height: 40px" type="button" class="btn btn-primary">Confirm Email</button>
+                                                                <a href="#" class="link-button">Confirm Email</a>
                                                             </span>
                                                         </td>
                                                     </tr>
