--- a/SplashPageWebApp/EmailTemplate/EmailTemplate.html
+++ b/SplashPageWebApp/EmailTemplate/EmailTemplate.html
@@ -458,9 +458,9 @@
                                                         </td>                                                      
                                                     </tr>
                                                     <tr>
-                                                        <td class="center" style="text-align: center; padding-top: 10px;">
+                                                        <td class="center" style="text-align: center; padding-top: 25px;">
                                                             <span>
-                                                                <a href="#" class="link-button">Confirm Email</a>
+                                                                <a href="#" class="link-button">Confirm Code</a>
                                                             </span>
                                                         </td>
                                                     </tr>
