add config file; add confirm code function

--- a/SplashPageWebApp/EmailTemplate/EmailTemplate.html
+++ b/SplashPageWebApp/EmailTemplate/EmailTemplate.html
@@ -460,7 +460,7 @@
                                                     <tr>
                                                         <td class="center" style="text-align: center; padding-top: 25px;">
                                                             <span>
-                                                                <a href="#" class="link-button">Confirm Code</a>
+                                                                <a href="{link}" class="link-button">Confirm Code</a>
                                                             </span>
                                                         </td>
                                                     </tr>
